dark mode bug fixed

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -41,3 +41,7 @@ html[data-theme='dark'] .footer {
 html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0);
 }
+
+html[data-theme='dark'] .docMainContainer_r8cw {
+    background-color: #000000;
+}
